Fix image overlapping not rendering on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 
 #logo {
     position: relative;
+    z-index: 2;
 }
 
 #logo-text {
@@ -22,6 +23,7 @@
     left:0;
     right:0;
     margin:0 auto;
+    z-index: 1;
 }
 
 #nav ul li a.button {
